# Interpretable-Latent-Intervention

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: sample_gsm8k.json
scripts/: run_intervention.py  train_energy.py  train_mapper.py
src/ili/: __init__.py  config.py  data.py  decoding.py  geometry.py  interventions.py  latent_cache.py  model_utils.py  paradigms.py  probes.py  runner.py
