[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ili"
version = "0.1.0"
description = "Interpretable Latent Intervention: training-free decode-time interventions on latent reasoning."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1",
    "transformers>=4.40",
    "numpy>=1.24",
    "tqdm>=4.65",
]

[tool.setuptools.packages.find]
where = ["src"]
